adding responsive grid initial code

--- a/steps/1_Serve-and-fetch-JSON/index.html
+++ b/steps/1_Serve-and-fetch-JSON/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en">
-<title> Serve & Fetch JSON </title>
+<title> Step 1 🐾: Serve and fetch JSON </title>
 <head>
   <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
 <body>
 
   <div class="box">
-    <h1> Serve & Fetch JSON </h1>
+    <h1> Step 1 🐾: Serve and fetch JSON </h1>
     <textarea id="jsonDisplay" class="row fill-content"></textarea>
   </div>
 
