--- a/steps/2_Display-the-data/index.html
+++ b/steps/2_Display-the-data/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en">
 <!-- <link rel="icon" href="link/or/path">  -->
-<title> Display the data </title>
+<title> Step 2 🐾: Display the data </title>
 <head>
   <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
   <header class="app-header">
 
     <span class="app-title">
-      Display the data
+      Step 2 🐾: Display the data
     </span>
 
     <nav class="nav-top-right">
