--- a/steps/3_Resize-images/index.html
+++ b/steps/3_Resize-images/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en">
 <!-- <link rel="icon" href="link/or/path">  -->
-<title> Resize Images </title>
+<title> Step 3 🐾: Resize images </title>
 <head>
   <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
   <header class="app-header">
 
     <span class="app-title">
-      Resize Images
+      Step 3 🐾: Resize images
     </span>
 
     <nav class="nav-top-right">
