--- a/steps/4_Responsive-grid/index.html
+++ b/steps/4_Responsive-grid/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html lang="en">
 <!-- <link rel="icon" href="link/or/path">  -->
-<title> Wireframe Grid and Breakpoints </title>
+<title> Step 4 🐾: Responsive grid </title>
 <head>
   <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/vars.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/header.css">
-
+  <link rel="stylesheet" href="css/listings.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
   <header class="app-header">
 
     <span class="app-title">
-      Wireframe Grid and Breakpoints
+      Step 4 🐾: Responsive grid
     </span>
 
     <nav class="nav-top-right">
@@ -34,6 +34,10 @@
   </main>
 
 
+<script type="text/javascript" src="js/errorMessages.js"></script>
+<script type="text/javascript" src="js/toolkit.js"></script>
+<script type="text/javascript" src="js/listings.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
+
 </body>
 </html>
