added step responsive grid

--- a/steps/4_Responsive-grid/index.html
+++ b/steps/4_Responsive-grid/index.html
@@ -11,28 +11,22 @@
 </head>
 <body>
 
-
   <header class="app-header">
-
     <span class="app-title">
       Step 4 🐾: Responsive grid
     </span>
-
     <nav class="nav-top-right">
       <button aria-label="menu" class="button-1 nav-top-right_button">
         &bull; &bull; &bull;
       </button>
     </nav>
-
   </header>
 
-
   <main>
-
-    <section id="tripSet_container"></section>
-
+    <section class="flex-grid">
+      <div id="tripSet_container" class="row"></div>
+    </section>
   </main>
-
 
 <script type="text/javascript" src="js/errorMessages.js"></script>
 <script type="text/javascript" src="js/toolkit.js"></script>
