working on filter

--- a/steps/5_Filter-and-sort/index.html
+++ b/steps/5_Filter-and-sort/index.html
@@ -24,7 +24,14 @@
   </header>
 
   <nav class="app-navigation">
-
+    <section aria-label="sort listings" class="sort-nav">
+      Check in Date Order:
+      <button>Closest</button>
+      <img src="images/reorder.png" alt="reorder listings icon" class="reorder-icon">
+      <button>Furthest</button>
+    </section>
+    &nbsp; &bull;|&bull; &nbsp;
+    <section id="filter_container" aria-label="filter listings"></section>
   </nav>
 
   <main>
@@ -35,6 +42,7 @@
 
 <script type="text/javascript" src="js/errorMessages.js"></script>
 <script type="text/javascript" src="js/toolkit.js"></script>
+<script type="text/javascript" src="js/navigation.js"></script>
 <script type="text/javascript" src="js/listings.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 
