adding step 5 filter and sort

--- a/steps/6_Style/index.html
+++ b/steps/6_Style/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en">
 <!-- <link rel="icon" href="link/or/path">  -->
-<title> Step 5 🐾: Filter and Sort </title>
+<title> Step 6 🐾: Style </title>
 <head>
   <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
   <header class="app-header">
     <div class="app-header-container">
       <span class="app-title">
-        Step 5 🐾: Filter and Sort
+        Step 6 🐾: Style
       </span>
       <nav class="nav-top-right">
         <button aria-label="menu" class="button-1 nav-top-right_button">
