adding width css to header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/navigation.css">
   <link rel="stylesheet" href="css/listings.css">
-  <link rel="stylesheet" href="css/_medium_width.css">
-  <link rel="stylesheet" href="css/_small_width.css">
+  <link rel="stylesheet" href="css/width_md.css">
+  <link rel="stylesheet" href="css/width_sm.css">
 
 </head>
 <body>
