--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <header class="app-header">
+  <header id="appHeader">
     <div class="app-header-container">
       <span class="app-title">
         Inspirato UI Engineering Code Challenge
@@ -30,7 +30,7 @@
     </div>
   </header>
 
-  <nav id="navigation" class="app-navigation">
+  <nav id="appNavigation">
     <div class="app-navigation-container">
       <section aria-label="sort listings" class="app-navigation-section sort">
         <span class="nav-lable"> &bull; Sort check in date </span>
@@ -51,7 +51,7 @@
     </div>
   </nav>
 
-  <main>
+  <main id="appMain">
     <section class="flex-grid">
       <h2 class="app-h2"> - Location Listings - </h2>
       <div id="tripSet_container" class="row"></div>
